Add drug to DB
